# crypto-portfolio-qopt

./: .dockerignore  .env.pasqal.example  .gitignore  Dockerfile.go  Dockerfile.python  README.md  docker-compose.yml  go.mod  ingest  pyproject.toml  requirements.txt
cmd/ingest/: main.go
configs/data/: default.yaml
configs/experiments/: example_mean_variance.yaml  pasqal_mean_variance.yaml  pasqal_n10.yaml  pasqal_n25.yaml  pasqal_n30.yaml  pasqal_n60.yaml  pasqal_n80.yaml  pasqal_test_n10.yaml  pasqal_test_n20.yaml  pasqal_test_n3.yaml
configs/providers/: local.yaml
configs/solvers/: default.yaml
internal/config/: config.go
internal/ingest/: binance_connector.go  coingecko_connector.go  connector.go  kraken_connector.go  run.go  types.go
internal/ingest/config/: config.go
internal/ingest/connectors/: binance.go  coingecko.go  connector_base.go  kraken.go
internal/ingest/models/: asset.go  dataset.go  matrix.go  timeseries.go
internal/ingest/pipeline/: align.go  fetch.go  normalize.go
internal/pipeline/: build.go  fetch.go  normalize.go  to_matrix.go
internal/storage/: json.go  parquet.go
scripts/: generate_report.py  ingest_market_data.sh  run_experiment.py
src/qportfolio/: __init__.py
src/qportfolio/qopt/: data.py  (+7 more)
tests/: test_align_time_series.py  test_benchmark_core.py  test_compute_correlations.py  test_compute_log_returns.py  test_compute_volatility.py  test_covariance_matrix.py  test_go_json_loader.py  test_market_cap_and_build_full_dataset.py  test_ohlcv_to_snapshots.py  test_optimization_core.py  test_smoke.py  test_solver_core.py
(+66 files in other folders)
