[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-portfolio-qopt"
version = "0.1.0"
description = "Crypto portfolio optimisation with classical and Pasqal quantum solvers"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
quantum = [
    "pulser>=0.20",
    "pulser-simulation>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
